<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_channel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_channel_ese"/>
    
    <item
        android:id="@+id/action_basic_logical"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_basic_channel"/>
    
    <item
        android:id="@+id/action_save_log_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save_log_off"/>
    
    <item
        android:id="@+id/action_connect_to_oma"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_connect_to_oma"/>
    
    <item
        android:id="@+id/action_run_script"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_run_script"/>
    
     <item
        android:id="@+id/action_send_log"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_send_log"/>
     
	<item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
</menu>
