<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="wrap_content" android:layout_height="wrap_content" 
    android:orientation="vertical">
    <TextView android:id="@+id/textTitle" 
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textSize="20dp"/> 
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:text="@string/channel_ese" android:onClick="dismissListener"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:text="@string/channel_df" android:onClick="dismissListener"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:text="@string/channel_sim" android:onClick="dismissListener"/> 
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:text="@string/channel_iso" android:onClick="dismissListener"/> 
	<Button android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:text="@string/channel_oti" android:onClick="dismissListener"/>
	<Button android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:text="@string/channel_sim_tm" android:onClick="dismissListener" android:visibility="gone"/> 
</LinearLayout>
