<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        android:background="@android:color/transparent" >
        
        <LinearLayout
	        android:id="@+id/layout4"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:weightSum="2"
	        android:orientation="horizontal"
	        android:background="@android:color/transparent" >
	        
		    <TextView
		        android:id="@+id/titleAID"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:text="@string/aid_title" />
		    
		    <EditText
	        	android:id="@+id/txtAID"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.5"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
	        	android:inputType="textNoSuggestions" />
	    </LinearLayout>
	    
        <LinearLayout
	        android:id="@+id/layout5"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:weightSum="2"
	        android:orientation="horizontal"
	        android:background="@android:color/transparent" >
	        
		    <TextView
		        android:id="@+id/titleCommand"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:text="@string/command_title" />
		    
		    <EditText
	        	android:id="@+id/txtCommand"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.5"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
	        	android:inputType="textNoSuggestions" />
	    </LinearLayout>
	    
        <Button
             android:id="@+id/btnRun"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
		     android:layout_weight="1"
		     android:layout_gravity="center_horizontal"
		     android:text="@string/run_title" />
            />
	    
	    <ScrollView android:id="@+id/textAreaScroller" 
    		android:layout_width="fill_parent" 
    		android:layout_height="0dp"
    		android:layout_weight="7" >
        <TextView
		       android:id="@+id/txtLogView"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"/>
        
        </ScrollView>
	    
	</LinearLayout>
    

</RelativeLayout>
